# ifohack2023

./: .gitignore  README.md
Cloud access/: AdminNotes.md  GiteaWorkflow.md  HowTo.md
Leaderboard/: Dockerfile  README.md  app.py  requirements.txt  sample_scores.csv  utils.py
Leaderboard/.streamlit/: config.toml
Leaderboard/scoring/: README.md  requirements.txt  score.py
Workshops/DLR/: README.md  ifohack_spatial_py310_environment.yml
Workshops/HTML Basics and VSCode/: README.md  app.py  requirements.txt
Workshops/KfW_News_Challenge/: README.md
Workshops/Streamlit Basics and VSCode/: Dockerfile  README.md  Welcome.py  requirements.txt  utils.py
Workshops/Webscraping Basics and Postman/: README.md
Workshops/ifo/: Introduction.ipynb  README.md  Richtige_Zitierung.txt  ifoGPT.ipynb  index.html  text.css  text.js
deploy/: .env  docker-compose.yml  ifohack.service  run.sh
ifoHack prep course/: .gitignore  README.md  ifo_tasks_environment.yml
ifoHack prep course/final_exercise/: README.md
ifoHack prep course/task_data_loading_and_preparation/: README.md  demo_numpy.ipynb  demo_pandas.ipynb  solution_numpy.ipynb  (+3 more)
ifoHack prep course/task_forecasting_training/: .gitignore  pyproject.toml
ifoHack prep course/task_forecasting_training/.devcontainer/: Dockerfile  devcontainer.json
ifoHack prep course/task_forecasting_training/notebooks/: 01_processing_timeseries_data.ipynb  02_analyzing_visualizing_timeseries.ipynb  03_strong_baseline_forecasts.ipynb  04_forecasting_with_ML.ipynb  05_forecasting_with_DL.ipynb
leaderboard/: README.md  app.py
(+61 files in other folders)
