[tool.poetry]
name = "forecasting-training"
version = "1.0.0"
description = "AT Forecasting Training"
authors = ["Alexander Thamm GmbH"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
gluonts = {extras = ["mxnet", "torch", "prophet", "R"], version = "0.12.3"}
scikit-learn = "^1.1.2"
pyarrow = "^9.0.0"
statsmodels = "^0.13.5"
statsforecast = "^1.4.0"
orjson = "^3.8.6"
lightgbm = "^3.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pylint = "^2.15.3"
flake8 = "^5.0.4"
bandit = "^1.7.4"

[tool.poetry.group.ide]
optional = true

[tool.poetry.group.ide.dependencies]
ipykernel = "^6.21.2"
ipywidgets = "^7.7.2"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
